--- a/app/views/main_view.phtml
+++ b/app/views/main_view.phtml
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
-    <link rel="stylesheet" href="<?php echo BASE_URL; ?>static/css/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="<?php echo BASE_URL; ?>assets/css/style.css" type="text/css" media="screen" />
 </head>
 <body>
 	
@@ -15,6 +15,7 @@
         
         <h1>Welcome to Nano Framework</h1>
         <p>To get started please read the documentation at <a href="https://github.com/ncou/NanoMVC">https://github.com/ncou/NanoMVC</a>.</p>
+        <?php if (isset($test)) print_r($test) ?>
         
     </div>
 
